--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
     <script>
         const emojis = ['💖', '🎈', '⭐', '🍰'];
         const messages = [
-            '愿你的生日如璀璨星辰般闪耀，幸福永远与你相伴！',
-            '在这个特别的日子里，祝你生日快乐，梦想成真！',
-            '生日快乐！愿生活的每一天都充满阳光和欢笑。',
+            '猪猪愿你的生日如璀璨星辰般闪耀，幸福永远与你相伴！',
+            '猪猪在这个特别的日子里，祝你生日快乐，梦想成真！',
+            '猪猪生日快乐！愿生活的每一天都充满阳光和欢笑。',
             '愿你的生日是一场奇妙的冒险，快乐永不止步！',
             '祝你生日快乐，岁岁年年都有今朝的快乐！'
         ];
