--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             "老公老公我爱你，就像老鼠爱大米！",
             "亲爱滴，祝你生日快乐！",
             "娃他爸，你以后走路看着点，非要撞我心上！",
-            "我办事十拿九稳，少你一吻。"
+            "我办事十拿九稳，少你一吻。",
             "近朱者赤，近你者甜。"  
         ];
 
