--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             "近朱者赤，近你者甜。",
             "你累不累？在我心里跑一天了。",
             "你是碳酸饮料吗？一打开就心动冒泡",
-            "老公，我最近胖了，因为心里装满了你。"，
+            "老公，我最近胖了，因为心里装满了你。",
             "喂，我手机没电了，可以借你的心充电吗？"
         ];
 
