--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
             "你累不累？在我心里跑一天了。",
             "你是碳酸饮料吗？一打开就心动冒泡",
             "老公，我最近胖了，因为心里装满了你。",
-            "喂，我手机没电了，可以借你的心充电吗？"
+            "喂，我手机没电了，可以借你的心充电吗？",
+            "从没说过土味儿情话，你不会被我酸掉大牙吧哈哈哈。"，
+            "如果重选一万次——清晨的吻是你，夜半的灯是你，白发苍苍时握紧的手还是你。"
         ];
 
         function createEmoji() {
